[package]
name = "libharu"
version = "0.1.5"
authors = ["saelay <saelay@outlook.jp>"]
edition = "2018"

description = "Rust binding for libharu(http://libharu.org/) PDF library."
repository = "https://github.com/saelay/libharu-rs"
license = "MIT"
readme = "README.md"

categories = ["rendering"]
keywords = ["pdf", "libharu", "haru"]


[dependencies]
libharu-sys = "0.0.1"
anyhow = "1.0.44"
bitflags = "1.3.2"

[dev-dependencies]
encoding_rs = "0.8.28"
